Implement hashCode() in Json